# espeople

./: Cargo.toml  workspace.code-workspace
.cargo/: config.toml
aggregator/: Cargo.toml  data.csv
aggregator/src/: main.rs
dashboard/: package.json
dashboard/components/: Chart.tsx  Spinner.tsx
dashboard/lib/: data.ts  use-time.ts
dashboard/pages/: index.tsx
dashboard/styles/: Home.module.css  globals.css
esp/: README.md  platformio.ini
esp/src/: main.cpp  main.ino  sdk_structs.h
espeople/: Cargo.toml
src/: esppl.cpp  esppl.h  main.ino  main.rs
